--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -193,7 +193,6 @@
 %
 % \begin{macro}[EXP]{\draw_point_unit_vector:n}
 % \begin{macro}[EXP]{\@@_point_unit_vector:nn}
-% \begin{macro}[EXP]{\@@_point_unit_vector:nnn, \@@_point_unit_vector:fnn}
 %   Only a single point expression so the expansion is done here. The
 %   outcome is the normalised vector from $(0,0)$ in the direction of
 %   the point, \emph{i.e.}
@@ -206,18 +205,10 @@
   { \@@_point_process:nn { \@@_point_unit_vector:nn } {#1} }
 \cs_new:Npn \@@_point_unit_vector:nn #1#2
   {
-    \@@_point_unit_vector:fnn
-      { \fp_eval:n { 1 / sqrt( #1 * #1 + #2 * #2 ) } }
-      {#1} {#2}
-  }
-\cs_new:Npn \@@_point_unit_vector:nnn #1#2#3
-  {
     \@@_point_to_dim:n
-      { ( #2 , #3 ) * #1  }
+      { ( #1 , #2 ) / (sqrt(#1 * #1 + #2 * #2)) }
   }
-\cs_generate_variant:Nn \@@_point_unit_vector:nnn { f }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -228,8 +219,6 @@
 % \begin{macro}[EXP]{\@@_point_intersect_lines:nnnnnnnn}
 % \begin{macro}[EXP]
 %   {\@@_point_intersect_lines_aux:nnnnnn, \@@_point_intersect_lines_aux:ffffff}
-% \begin{macro}[EXP]
-%   {\@@_point_intersect_lines_aux:fnnnnnn, \@@_point_intersect_lines_aux:fnnnnnn}
 %    The intersection point~$P$ between a line joining points $(x_{1}, y_{1})$
 %    and $(x_{2}, y_{2})$ with a second line joining points $(x_{3}, y_{3})$
 %    and $(x_{4}, y_{4})$ can be calculated using the formulae
@@ -286,19 +275,14 @@
   }
 \cs_new:Npn \@@_point_intersect_lines_aux:nnnnnn #1#2#3#4#5#6
   {
-    \@@_point_intersect_lines_aux:fnnnnnn
-      { \fp_eval:n { 1 / ( #4 * #5 - #6 * #3 ) } }
-      {#1} {#2} {#3} {#4} {#5} {#6}
+    \@@_point_to_dim:n
+      {
+        ( #2 * #3 - #1 * #4 , #2 * #5 - #1 * #6 )
+          / ( #4 * #5 - #6 * #3 )
+      }
   }
 \cs_generate_variant:Nn \@@_point_intersect_lines_aux:nnnnnn { ffffff }
-\cs_new:Npn \@@_point_intersect_lines_aux:nnnnnnn #1#2#3#4#5#6#7
-  {
-    \@@_point_to_dim:n
-      { #1 * ( #3 * #4 - #2 * #5 , #3 * #6 - #2 * #7 ) }
-  }
-\cs_generate_variant:Nn \@@_point_intersect_lines_aux:nnnnnnn { f }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -523,7 +507,7 @@
 \cs_new:Npn \@@_point_interpolate_distance_aux:nnnnnnn #1#2#3#4#5#6#7
   {
     \@@_point_interpolate_distance_aux:fnnnn
-      { \fp_eval:n { (#7) / sqrt ( #1 * #1 + #2 * #2 ) } }
+      { \fp_eval:n { (#7) / (sqrt ( #1 * #1 + #2 * #2 )) } }
       {#3} {#4} {#5} {#6}
   }
 \cs_generate_variant:Nn \@@_point_interpolate_distance_aux:nnnnnnn { ff }
