l3draw: 'inner' linewidth

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -65,7 +65,7 @@
 % \begin{function}{\g_draw_linewidth_default_dim}
 % \end{function}
 %
-% \begin{function}{\draw_linewidth_set:n}
+% \begin{function}{\draw_linewidth_set:n, \draw_inner_linewidth_set:n}
 %   \begin{syntax}
 %     \cs{draw_linewidth_set:n} \marg{dim}
 %   \end{syntax}
