l3draw: Several driver passthroughs
The only work here is that at the higher level we allow
fp expressions.

--- a/l3trial/l3draw/l3draw-state.dtx
+++ b/l3trial/l3draw/l3draw-state.dtx
@@ -90,6 +90,33 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\draw_miterlimit:n}
+%   Pass through to the driver layer.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_miterlimit:n #1
+  { \driver_draw_miterlimit:n { \fp_to_dim:n {#1} } }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \draw_cap_butt:, \draw_cap_rectangle:, \draw_cap_round:,
+%     \draw_evenodd_rule:, \draw_nonzero_rule:,
+%     \draw_join_bevel:, \draw_join_miter:, \draw_join_round:
+%   }
+%   All straight wrappers.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_cap_butt: { \driver_draw_cap_butt: }
+\cs_new_protected:Npn \draw_cap_rectangle: { \driver_draw_cap_rectangle: }
+\cs_new_protected:Npn \draw_cap_round: { \driver_draw_cap_round: }
+\cs_new_protected:Npn \draw_evenodd_rule: { \driver_draw_evenodd_rule: }
+\cs_new_protected:Npn \draw_nonzero_rule: { \driver_draw_nonzero_rule: }
+\cs_new_protected:Npn \draw_join_bevel: { \driver_draw_join_bevel: }
+\cs_new_protected:Npn \draw_join_miter: { \driver_draw_join_miter: }
+\cs_new_protected:Npn \draw_join_round: { \driver_draw_join_round: }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
