--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -60,15 +60,61 @@
 %   \end{syntax}
 % \end{function}
 %
-% \subsection{Settings}
+% \subsection{Graphics state}
 %
 % \begin{function}{\g_draw_linewidth_default_dim}
+%   The default value of the linewidth for stokes, set at the start
+%   of every drawing (\cs{draw_begin:}).
 % \end{function}
 %
 % \begin{function}{\draw_linewidth:n, \draw_inner_linewidth:n}
 %   \begin{syntax}
-%     \cs{draw_linewidth:n} \Arg{dim}
+%     \cs{draw_linewidth:n} \Arg{fp expr}
 %   \end{syntax}
+%   Sets the width to be used for stroking to \meta{fp expr} in \texttt{pt}.
+% \end{function}
+%
+% \begin{function}{\draw_nonzero_rule:, \draw_evenodd_rule:}
+%   \begin{syntax}
+%     \cs{draw_nonzero_rule:}
+%   \end{syntax}
+%   Active either the non-zero winding number or the even-odd rule,
+%   respectively, for determining what is inside a fill or clip area.
+%   For technical reasons, these command are not influenced by scoping
+%   and apply on an ongoing basis.
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \draw_cap_butt:      ,
+%     \draw_cap_rectangle: ,
+%     \draw_cap_round:
+%   }
+%   \begin{syntax}
+%     \cs{draw_cap_butt:}
+%   \end{syntax}
+%   Sets the style of terminal stroke position to one of butt, rectangle or
+%   round.
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \draw_join_bevel: ,
+%     \draw_join_miter: ,
+%     \draw_join_round:
+%   }
+%   \begin{syntax}
+%     \cs{draw_cap_butt:}
+%   \end{syntax}
+%   Sets the style of stroke joins to one of bevel, miter or round.
+% \end{function}
+%
+% \begin{function}{\draw_miterlimit:n}
+%   \begin{syntax}
+%     \cs{draw_miterlimit:n} \Arg{fp expr}
+%   \end{syntax}
+%   Sets the miter limit of lines joined as a miter, as described in the
+%   PDF and PostScript manuals.
 % \end{function}
 %
 % \subsection{Points}
