l3draw: Use softpaths in path set up
Only basic ones at the present, and with a hack in the
test files to make sure it actually works.

Lots of path stuff to do before these are 'really' active.

--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -152,7 +152,7 @@
 \cs_new_protected:Npn \@@_path_moveto:nn #1#2
   {
      \@@_path_update_limits:nn {#1} {#2}
-     \driver_draw_moveto:nn {#1} {#2}
+     \@@_softpath_moveto:nn {#1} {#2}
      \@@_path_update_last:nn {#1} {#2}
   }
 \cs_new_protected:Npn \draw_path_lineto:n #1
@@ -164,7 +164,7 @@
 \cs_new_protected:Npn \@@_path_lineto:nn #1#2
   {
      \@@_path_update_limits:nn {#1} {#2}
-     \driver_draw_lineto:nn {#1} {#2}
+     \@@_softpath_lineto:nn {#1} {#2}
      \@@_path_update_last:nn {#1} {#2}
   }
 \cs_new_protected:Npn \draw_path_curveto:nnn #1#2#3
@@ -183,7 +183,7 @@
      \@@_path_update_limits:nn {#1} {#2}
      \@@_path_update_limits:nn {#3} {#4}
      \@@_path_update_limits:nn {#5} {#6}
-     \driver_draw_curveto:nnnnnn {#1} {#2} {#3} {#4} {#5} {#6}
+     \@@_softpath_curveto:nnnnnn {#1} {#2} {#3} {#4} {#5} {#6}
      \@@_path_update_last:nn {#5} {#6}
   }
 %    \end{macrocode}
@@ -193,10 +193,10 @@
 % \end{macro}
 %
 % \begin{macro}{\draw_path_close:}
-%   A simple wrapper (though will need curved corner support).
+%   A simple wrapper (though will need curved corer support).
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_path_close:
-  { \driver_draw_closepath: }
+  { \@@_softpath_closepath: }
 %    \end{macrocode}
 % \end{macro}
 %
