--- a/l3trial/l3draw/l3draw-softpath.dtx
+++ b/l3trial/l3draw/l3draw-softpath.dtx
@@ -289,7 +289,7 @@
 \cs_new_protected:Npn \@@_softpath_curveto_opi:nn #1#2 
   { \@@_softpath_curveto_opi:nnNnnNnn {#1} {#2} }
 \cs_new_protected:Npn \@@_softpath_curveto_opi:nnNnnNnn #1#2#3#4#5#6#7#8
-  { \driver_draw_curevto:nnnnnn {#1} {#2} {#4} {#5} {#7} {#8} }
+  { \driver_draw_curveto:nnnnnn {#1} {#2} {#4} {#5} {#7} {#8} }
 \cs_new_protected:Npn \@@_softpath_curveto_opii:nn #1#2 { }
 \cs_new_protected:Npn \@@_softpath_curveto_opiii:nn #1#2 { }
 \cs_new_protected:Npn \@@_softpath_lineto_op:nn #1#2
