Update a comment [ci skip]

--- a/l3trial/l3draw/l3draw-softpath.dtx
+++ b/l3trial/l3draw/l3draw-softpath.dtx
@@ -71,7 +71,8 @@
 %
 % Each marker (operation) token takes two arguments, which makes processing
 % more straight-forward. As such, some operations have dummy arguments, whilst
-% others have to be split over several tokens.
+% others have to be split over several tokens. As the code here is at a low
+% level, all dimension arguments are assumed to be explicit and fully-expanded.
 %
 % \begin{variable}
 %   {
