--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -215,6 +215,12 @@
 %
 % \subsection{Paths}
 %
+% \begin{function}{\draw_path_corner_arc:n}
+%   \begin{syntax}
+%     \cs{draw_path_corner_arc:n} \Arg{point expr}
+%   \end{syntax}
+% \end{function}
+%
 % \begin{function}{\draw_path_moveto:n}
 %   \begin{syntax}
 %     \cs{draw_path_moveto:n} \Arg{point expr}
