l3draw: Init limits at max values

--- a/l3trial/l3draw/l3draw-scopes.dtx
+++ b/l3trial/l3draw/l3draw-scopes.dtx
@@ -101,10 +101,10 @@
   {
     \hbox_set:Nw \l_@@_main_box
       \driver_draw_begin:
-      \dim_gzero:N \g_@@_xmax_dim
-      \dim_gzero:N \g_@@_xmin_dim
-      \dim_gzero:N \g_@@_ymax_dim
-      \dim_gzero:N \g_@@_ymin_dim
+      \dim_gset:Nn \g_@@_xmax_dim { -\c_max_dim }
+      \dim_gset:Nn \g_@@_xmin_dim {  \c_max_dim }
+      \dim_gset:Nn \g_@@_ymax_dim { -\c_max_dim }
+      \dim_gset:Nn \g_@@_ymin_dim {  \c_max_dim }
       \bool_set_true:N \l_@@_update_bb_bool
       \draw_transform_reset:
       \draw_linewidth:n { \l_draw_default_linewidth_dim }
